Test a Cumulative Layout Shift fix
Add optimized noise image.

Add file passthrought in eleventy.js and a critical option to remove all
mentions to the ".noise" class.

Reorder preload assets in default.liquid.

Fix missing quotes in hero.liquid.

--- a/src/assets/css/components/_noise.scss
+++ b/src/assets/css/components/_noise.scss
@@ -1,7 +1,8 @@
-.noise {
-  background: url("/assets/images/Noise.png") repeat;
-  pointer-events: none;
-  position: absolute;
-  inset: 0;
-  opacity: 0.1;
-}
+// .noise {
+//   background-image: url("/assets/images/Noise.webp");
+//   background-repeat: repeat;
+//   pointer-events: none;
+//   position: absolute;
+//   inset: 0;
+//   opacity: 0.1;
+// }
